--- a/LearnVulkan.vcxproj
+++ b/LearnVulkan.vcxproj
@@ -153,6 +153,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\triangleShader.frag" />
+    <None Include="shaders\triangleShader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
