--- a/LearnVulkan.vcxproj.filters
+++ b/LearnVulkan.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\triangleShader.frag">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="shaders\triangleShader.vert">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
