--- a/LearnVulkan.vcxproj
+++ b/LearnVulkan.vcxproj
@@ -71,16 +71,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;..\stb-master;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;..\stb-master;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;..\stb-master;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\VulkanSDK\1.3.261.1\Include;..\VulkanSDK\1.3.261.1\Include\glm;..\glfw-3.3.8.bin.WIN64\include;..\stb-master;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
