completed generating mipmaps

--- a/LearnVulkan.vcxproj.filters
+++ b/LearnVulkan.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tiny_obj_loader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
