--- a/LearnVulkan.vcxproj
+++ b/LearnVulkan.vcxproj
@@ -157,6 +157,9 @@
     <None Include="shaders\triangleShader.frag" />
     <None Include="shaders\triangleShader.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tiny_obj_loader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
